iac/kubernetes/net/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: generals-gateway
  namespace: istio-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: istio
  addresses:
    - type: Hostname
      value: istio-ingressgateway.istio-system.svc.cluster.local
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "generals.kazenin.ru"
      tls:
        mode: Terminate
        certificateRefs:
          - name: generals-kazenin-ru-tls
            namespace: istio-system
      allowedRoutes:
        namespaces:
          from: All
