iac/kubernetes/net/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: generals-gateway
  namespace: generals
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "generals.umu-art.ru"
      tls:
        mode: SIMPLE
        credentialName: generals-tls-certificate
