iac/kubernetes/net/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: generals-http-redirect
  namespace: istio-system
spec:
  parentRefs:
    - name: generals-gateway
      namespace: istio-system
      sectionName: http-generals-kazenin-ru
  hostnames:
    - "generals.kazenin.ru"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
