iac/kubernetes/net/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: generals-httproute
  namespace: generals
spec:
  parentRefs:
    - name: generals-gateway
      namespace: istio-system
      sectionName: https-generals-kazenin-ru
  hostnames:
    - "generals.kazenin.ru"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend
      backendRefs:
        - name: g-core
          namespace: generals
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: g-ui
          namespace: generals
          port: 80
